# ratv2

./: LICENSE  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml
client/: requirements.txt
client/src/core/: client.py  security.py
client/src/modules/: base_module.py  module_manager.py
common/: requirements.txt
docker/client/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/nginx/: Dockerfile
docker/server/: Dockerfile
frontend/: package.json
frontend/src/pages/: Login.js
server/: requirements.txt
